--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,4 +1,5 @@
 <% layout ('layouts/boilerplate')%>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/star.css" />
 
     <div class="row mb-5">
         <div class="col-6  ">
@@ -36,13 +37,25 @@
         </div>
         <div class="col-6">
             <% if(loggedInUser) {%>
-                <div class="my-3">
+                <div class="m-auto">
                     <h2>Leave a review</h2>
                     <form action="/campgrounds/<%=camp.id%>/review" method="post" class="mb-3 validated-form"
                         novalidate>
-                        <label for="customRange2" class="form-label">Rating</label>
-                        <input type="range" name="review[rating]" class="form-range" min="1" max="5" id="customRange2">
-                        <div>
+                        <fieldset class="starability-basic">
+                            <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1"
+                                checked aria-label="No rating." />
+                            <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                            <label for="first-rate1" title="Terrible">1 star</label>
+                            <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                            <label for="first-rate2" title="Not good">2 stars</label>
+                            <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                            <label for="first-rate3" title="Average">3 stars</label>
+                            <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                            <label for="first-rate4" title="Very good">4 stars</label>
+                            <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                            <label for="first-rate5" title="Amazing">5 stars</label>
+                        </fieldset>
+                        <div class="pt-0">
                             <label for="body">Review</label>
                             <textarea name="review[body]" id="body" class="form-control" required></textarea>
                             <div class="valid-feedback">
@@ -58,10 +71,12 @@
                         <% for (let review of camp.reviews) {%>
                             <div class="card mb-2">
                                 <div class="card-body">
-                                    <h5 class="card-title">Rating: <%=review.rating%>
-                                    </h5>
-                                    <h6 class="card-subtitle mb-2 text-muted">By <%=review.author.username%>
+                                    <h6 class="card-subtitle mb-2 text-muted">
+                                        <%=review.author.username%>
                                     </h6>
+                                    <p class="starability-result" data-rating="<%=review.rating%>">
+                                        Rated: <%=review.rating%> stars
+                                    </p>
                                     <p class="card-text">Review: <%=review.body%>
                                     </p>
                                 </div>
