--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,9 +1,10 @@
 <% layout('layouts/boilerplate') %>
 
     <div class="row">
-        <h1 class="text-center mb-5">New Campground</h1>
+        <h1 class="text-center mb-5">Update Campground</h1>
         <div class="col-6 offset-3">
-            <form action="/campgrounds/<%=camp._id%>?_method=put" method="post" class="mb-5 validated-form" novalidate>
+            <form action="/campgrounds/<%=camp._id%>?_method=put" method="post" class="mb-5 validated-form" novalidate
+                enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
                     <input type="text" class="form-control" id="title" name="campground[title]" value="<%=camp.title%>"
@@ -16,14 +17,6 @@
                     <label for="location" class="form-label">Location</label>
                     <input type="text" class="form-control" id="location" name="campground[location]"
                         value="<%=camp.location%>" required>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
-                </div>
-                <div class=" mb-3">
-                    <label for="image" class="form-label">Image URL</label>
-                    <input type="text" class="form-control" id="image" name="campground[image]" value="<%=camp.image%>"
-                        required>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
@@ -48,7 +41,27 @@
                         Looks good!
                     </div>
                 </div>
-                <button type=" submit" class="btn btn-info">Submit</button>
+
+                <div class="mb-3">
+                    <input class="form-control" type="file" id="formFileMultiple" name="image" multiple>
+                    <div id="fileList" class="form-text mt-2 text-muted"></div>
+                </div>
+                <div class="mb-3">
+                    <label for="">Delete Images</label>
+                    <div class="d-flex flex-wrap">
+                        <% camp.images.forEach((img,i)=>{%>
+                            <img src="<%=img.thumbnail%>" class="img-thumbnail" alt="">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="<%=img.filename%>"
+                                    id="delete-<%=i%>" name="deleteImages[]">
+                                <label class="form-check-label" for="delete-<%=i%>">
+                                    Delete Image ?
+                                </label>
+                            </div>
+                            <%})%>
+                    </div>
+                </div>
+                <button type=" submit" class="btn btn-info">Update Campground</button>
             </form>
         </div>
 
