--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -5,7 +5,7 @@
         <div class="container card mb-5 ">
             <div class=" row">
                 <div class="col-md-3">
-                    <img src="<%=camp.image%>" class="img-fluid rounded-start">
+                    <img src="<%=camp.images[0].url%>" class="img-fluid rounded-start">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
