--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,5 +1,5 @@
 <% layout('layouts/boilerplate') %>
-
+<div id="map" style="width: 100%; height: 500px"></div>
     <h1 class="text-center mb-3">All Camps</h1>
     <%for (let camp of campgrounds){%>
         <div class="container card mb-5 ">
@@ -24,3 +24,19 @@
             </div>
         </div>
         <%}%>
+
+<%- "<script>" %>
+const maptilerApiKey = "<%- process.env.MAPTILER_API_KEY %>";
+const campgrounds = {
+  type: "FeatureCollection",
+  features: <%- JSON.stringify(
+    campgrounds.map(campground => ({
+      type: "Feature",
+      geometry: campground.geometry,
+      properties: { popUpMarkup: campground?.properties?.popUpMarkup }
+    }))
+  ) %>
+};
+<%- "</script>" %>
+
+<script src="/javascripts/clusterMap.js"></script>
